@@ -46,6 +46,8 @@ following names for their contribution to the product.
 * Brad Jorsch
 * Daniel Arnold
 * Danny B.
+* FunPika
+* Happy-melon
 * Jeremy Baron
 * Juliano F. Ravasi
 * Louperivois
