@@ -48,6 +48,7 @@ it from source control: http://www.mediawiki.org/wiki/Download_from_SVN
   whitelist on or off.
 * Added $wgRenderHashAppend to append some string to the parser cache and the
   sitenotice cache keys.
+* $wgRCChangedSizeThreshold is now a positive integer by default, 
 
 === Migrated extensions ===
 The following extensions are migrated into MediaWiki 1.14:
@@ -264,6 +265,9 @@ The following extensions are migrated into MediaWiki 1.14:
 * (bug 15846) Categories "leak" from older revisions in certain circumstances
 * (bug 15928) Special pages dropdown should be inline in non-MonoBook skins
 * (bug 14178) Some uses of UserLoadFromSession hook cause segfault 
+* (bug 15925) Postitive bytes added on recentchanges and watchlists are now bolded
+  if above the threshold, previously it only worked for negatives
+
 
 === API changes in 1.14 ===
 
